package com.example.music;

public enum PlaybackSource {
    SEARCH,
    LIBRARY
}
